Initial test of Jekyll site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+---
+layout: default
+title: Veusz scientific plotting
+---
+<div class="blurb">
+  <h1>Veusz</h1>
 
-<body>
-<h1>Test site</h1>
-</body>
-
-</html>
+  <p>
+    Veusz homepage
+  </p>
+</div>
