Add images on front page

--- a/help-support/index.html
+++ b/help-support/index.html
@@ -12,7 +12,7 @@ title: Veusz Help and Support
       <a href="/docs/manual.pdf">PDF</a> and <a href="/docs/manual.txt">Text</a>)
     </li>
 
-    <li><a href="http://vimeo.com/14577084">Video tutorial</a></li>
+    <li><a href="https://vimeo.com/14577084">Video tutorial</a></li>
 
     <li><a href="/examples/">Examples</a></li>
 
@@ -40,7 +40,7 @@ title: Veusz Help and Support
   <h2>Bugs and suggestions</h2>
   <p>
     Please report bugs and add suggestions to the
-    project's <a href="http://github.com/veusz/veusz/issues">issue
+    project's <a href="https://github.com/veusz/veusz/issues">issue
     tracker</a>.
 
     Please do not send personal emails to the developers unless there
