--- a/index.html
+++ b/index.html
@@ -45,4 +45,19 @@ title: Veusz &ndash; a scientific plotting package
     or for automating tasks.
   </p>
 
+  <table>
+    <tr>
+      <td id="centcontainer">
+        <a href="/screenshots/">
+          <img src="/media/click-screenshot.png" alt="Screenshot" title="Screenshots">
+        </a>
+      </td>
+      <td id="centcontainer">
+        <a href="/examples/">
+          <img src="/media/click-example.png" alt="Examples" title="Examples">
+        </a>
+      </td>
+    </tr>
+  </table>
+
 </div>
