Track latest version

--- a/download/index.html
+++ b/download/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Download Veusz
 ---
 
-{% assign ver = "1.26" %}
+{% assign ver = site.data.release["release"] %}
 {% assign dlroot = "http://download.gna.org/veusz" %}
 
 <div class="blurb">
