Fix feature links

--- a/features/index.html
+++ b/features/index.html
@@ -10,33 +10,33 @@ title: Veusz Features
     <li>
       Plotting features:
       <ul>
-        <li><a href="examples/#profile">X-Y plots</a> (with
-          <a href="examples/#import">errorbars</a>, <a href="examples/#coloredpoints">colours</a>
-          and <a href="examples/#starchart">sizes</a>)
-        </li><li><a href="examples/#sin">Line</a> and <a href="examples/#functions">function plots</a>
-        </li><li><a href="examples/#contour">Contour plots</a>
-        </li><li><a href="examples/#mandelbrot">Images</a> (with colour mappings and colorbars)
-        </li><li><a href="examples/#histogram">Stepped plots (for histograms)</a>
-        </li><li><a href="examples/#barplots">Bar graphs</a>
-        </li><li><a href="examples/#vectorfield">Vector field plots</a>
-        </li><li><a href="examples/#boxplot">Box plots</a>
-        </li><li><a href="examples/#polar">Polar plots</a>
-        </li><li><a href="examples/#ternary">Ternary plots</a>
-        </li><li><a href="examples/#datebar">Plotting dates</a>
-        </li><li><a href="examples/#fit">Fitting functions to data</a>
-        </li><li><a href="examples/#stackedxy">Stacked plots and arrays of plots</a>
-        </li><li><a href="examples/#nested">Nested plots</a>
-        </li><li><a href="examples/#spectrum">Plot keys</a>
-        </li><li><a href="examples/#labels">Plot labels</a>
-        </li><li><a href="examples/#shapes">Shapes and arrows on plots</a>
-        </li><li><a href="examples/#labels">LaTeX-like formatting for text</a>
-        </li><li><a href="examples/#multiaxes">Multiple axes</a>
-        </li><li><a href="examples/#broken_axis">Axes with steps in axis scale (broken axes)</a>
+        <li><a href="/examples/#profile">X-Y plots</a> (with
+          <a href="/examples/#import">errorbars</a>, <a href="/examples/#coloredpoints">colours</a>
+          and <a href="/examples/#starchart">sizes</a>)
+        </li><li><a href="/examples/#sin">Line</a> and <a href="/examples/#functions">function plots</a>
+        </li><li><a href="/examples/#contour">Contour plots</a>
+        </li><li><a href="/examples/#mandelbrot">Images</a> (with colour mappings and colorbars)
+        </li><li><a href="/examples/#histogram">Stepped plots (for histograms)</a>
+        </li><li><a href="/examples/#barplots">Bar graphs</a>
+        </li><li><a href="/examples/#vectorfield">Vector field plots</a>
+        </li><li><a href="/examples/#boxplot">Box plots</a>
+        </li><li><a href="/examples/#polar">Polar plots</a>
+        </li><li><a href="/examples/#ternary">Ternary plots</a>
+        </li><li><a href="/examples/#datebar">Plotting dates</a>
+        </li><li><a href="/examples/#fit">Fitting functions to data</a>
+        </li><li><a href="/examples/#stackedxy">Stacked plots and arrays of plots</a>
+        </li><li><a href="/examples/#nested">Nested plots</a>
+        </li><li><a href="/examples/#spectrum">Plot keys</a>
+        </li><li><a href="/examples/#labels">Plot labels</a>
+        </li><li><a href="/examples/#shapes">Shapes and arrows on plots</a>
+        </li><li><a href="/examples/#labels">LaTeX-like formatting for text</a>
+        </li><li><a href="/examples/#multiaxes">Multiple axes</a>
+        </li><li><a href="/examples/#broken_axis">Axes with steps in axis scale (broken axes)</a>
         </li><li>Axes scales
-          using <a href="examples/#axis_function">functional forms</a>,
-          optionally <a href="examples/#axis_function_linked">linked to
+          using <a href="/examples/#axis_function">functional forms</a>,
+          optionally <a href="/examples/#axis_function_linked">linked to
             another axis</a>
-        </li><li><a href="examples/#dsexpressions">Plotting functions of datasets</a>
+        </li><li><a href="/examples/#dsexpressions">Plotting functions of datasets</a>
         </li>
       </ul>
     </li>
