Add release feed

--- a/download/index.html
+++ b/download/index.html
@@ -32,7 +32,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}.tar.gz.sig">GPG/PGP signature</a>)
       or on <a href="https://pypi.python.org/pypi/veusz/">PyPI</a>
     </li>
-    <li><a href="https://github.com/veusz/veusz/releases">All recent releases</a></li>
+    <li><a href="https://github.com/veusz/veusz/releases">All recent releases</a> (<a href="https://github.com/veusz/veusz/releases.atom">release feed</a>)</li>
   </ul>
 
   <p>
