Update to new manual

--- a/help-support/index.html
+++ b/help-support/index.html
@@ -8,16 +8,15 @@ title: Veusz Help and Support
 
   <h2>Documentation</h2>
   <ul>
-    <li> <a href="/docs/manual.html">Manual</a> (or
-      <a href="/docs/manual.pdf">PDF</a> and <a href="/docs/manual.txt">Text</a>)
+    <li> <a href="/docs/manual/">Manual</a> (or
+      <a href="/docs/manual.pdf">PDF</a>)
     </li>
 
     <li><a href="https://vimeo.com/14577084">Video tutorial</a></li>
 
     <li><a href="/examples/">Examples</a></li>
 
-    <li><a href="/docs/veusz.man.txt">veusz man page</a>
-      and <a href="/docs/veusz_listen.man.txt">veusz_listen man page</a></li>
+    <li><a href="/docs/veusz.man.txt">veusz man page</a></li>
   </ul>
 
   <h2>Help and discussion</h2>
