Update for Veusz 2.0

--- a/download/index.html
+++ b/download/index.html
@@ -24,8 +24,8 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.sig">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-linux-i386.tar.gz">Latest Linux binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-linux-i386.tar.gz.sig">GPG/PGP signature</a>)
+      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz">Latest Linux binary</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz.sig">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}.tar.gz">Latest source code</a> with <a href="/releasenotes/{{ver}}-install.txt">install notes</a>
