--- a/download/index.html
+++ b/download/index.html
@@ -17,19 +17,19 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <ul>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz">Latest Linux binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}.tar.gz">Latest source code</a> with <a href="/releasenotes/{{ver}}-install.txt">install notes</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}.tar.gz.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}.tar.gz.asc">GPG/PGP signature</a>)
       or on <a href="https://pypi.python.org/pypi/veusz/">PyPI</a>
     </li>
     <li><a href="https://github.com/veusz/veusz/releases">All recent releases</a> (<a href="https://github.com/veusz/veusz/releases.atom">release feed</a>)</li>
