Most of 3.0 updates

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
-title: Veusz Examples
+title: Veusz 2D Examples
 ---
 
 <div class="blurb">
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title }} (also see <a href="../examples3d/">3D</a>)</h1>
+
+  <p></p>
 
   <h2 id="spectrum">spectrum</h2>
   <p>
