--- a/features/index.html
+++ b/features/index.html
@@ -8,7 +8,7 @@ title: Veusz Features
 
   <ul>
     <li>
-      Plotting features:
+      2D plotting features:
       <ul>
         <li><a href="/examples/#profile">X-Y plots</a> (with
           <a href="/examples/#import">errorbars</a>, <a href="/examples/#coloredpoints">colours</a>
@@ -38,6 +38,18 @@ title: Veusz Features
             another axis</a>
         </li><li><a href="/examples/#dsexpressions">Plotting functions of datasets</a>
         </li>
+      </ul>
+    </li>
+    <li>
+      3D plotting features:
+      <ul>
+        <li><a href="/examples3d/#3d_errors">3D point plots</a></li>
+        <li><a href="/examples3d/#3d_surface">3D surface plots from data</a></li>
+        <li><a href="/examples3d/#3d_functionline">3D function line plots</a></li>
+        <li><a href="/examples3d/#3d_function">3D function surface plots</a></li>
+        <li><a href="/examples3d/#3d_volume">3D volume plots</a></li>
+        <li><a href="/examples3d/#3d_multiaxes">Multiple 3D axes</a></li>
+        <li><a href="/examples3d/#3d_multigraph">Multiple plots allowed in a 3D space</a></li>
       </ul>
     </li>
     <li>
