--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Veusz &ndash; a scientific plotting package
   <p>
     Veusz is a scientific plotting and graphing program with a
     graphical user interface, designed to produce publication-ready
-    2D plots.
+    2D and <a href="/3d/">3D</a> plots.
 
     In addition it can be used as a module in Python for plotting.
 
@@ -30,7 +30,10 @@ title: Veusz &ndash; a scientific plotting package
     consistent object-based interface, where the user sets the
     properties of the widgets.
 
-    There are many options for customization of plots.
+    There are many options for customization of
+    plots. See <a href="/features/">features</a>, <a href="/examples/">2d
+    examples</a> and <a href="/examples3d/">3d examples</a> for more
+    idea of what can be done.
   </p>
 
   <p>
@@ -55,6 +58,11 @@ title: Veusz &ndash; a scientific plotting package
       <td id="centcontainer">
         <a href="/examples/">
           <img src="/media/click-example.png" alt="Examples" title="Examples">
+        </a>
+      </td>
+      <td id="centcontainer">
+        <a href="/examples3d/">
+          <img src="/media/click-3d-example.png" alt="3D Examples" title="3D Examples">
         </a>
       </td>
     </tr>
