Add screenshot for 3D

--- a/examples3d/index.html
+++ b/examples3d/index.html
@@ -4,7 +4,7 @@ title: Veusz 3D Examples
 ---
 
 <div class="blurb">
-  <h1>{{ page.title }} (also see <a href="../examples/">2D</a>)</h1>
+  <h1>{{ page.title }} (also see <a href="../examples/">2D</a> and <a href="/3d/">3D guide</a>)</h1>
 
   <p></p>
 
