--- a/help-support/index.html
+++ b/help-support/index.html
@@ -16,7 +16,9 @@ title: Veusz Help and Support
 
     <li><a href="/examples/">Examples</a></li>
 
-    <li><a href="/docs/veusz.man.txt">veusz man page</a></li>
+    <li><a href="/docs/veusz.man.txt">Veusz man page</a></li>
+
+    <li><a href="/3d/">Guide to using 3D</a></li>
   </ul>
 
   <h2>Help and discussion</h2>
