--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ title: Veusz &ndash; a scientific plotting package
     properties of the widgets.
 
     There are many options for customization of
-    plots. See <a href="/features/">features</a>, <a href="/examples/">2d
-    examples</a> and <a href="/examples3d/">3d examples</a> for more
-    idea of what can be done.
+    plots. See <a href="/features/">features</a>, <a href="/examples/">2D
+    examples</a> and <a href="/examples3d/">3D examples</a> to see
+    what can be done with the program.
   </p>
 
   <p>
