--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -8,20 +8,25 @@ title: Screenshots
     Screenshots
   </h1>
 
-<table>
+<table id="screenshottable">
 
 <tr>
 
-<td class="topalign">
-<h2 class="dotunder">dialog boxes</h2>
+<td>
+<h2>dialog boxes</h2>
 <a href="multiwins.png"><img src="thumb_multiwins.png" alt="veusz dialog boxes"></a>
+</td>
+
+<td>
+<h2>3d</h2>
+<a href="3d.png"><img src="thumb_3d.png" alt="veusz 3d"></a>
 </td>
 
 </tr>
 
 <tr>
-<td class="topalign">
-<h2 class="dotunder">windows</h2>
+<td>
+<h2>windows</h2>
 <a href="veusz_win_mainwin.png"><img src="thumb_veusz_win_mainwin.png"
 				     alt="windows main window"></a>
 </td>
@@ -32,45 +37,45 @@ title: Screenshots
 				     alt="linux main window"></a>
 </td>
 
-<td class="topalign">
-<h2 class="dotunder">mac os</h2>
+<td>
+<h2>mac os</h2>
 <a href="veusz_mac_mainwin.png"><img src="thumb_veusz_mac_mainwin.png" alt="mac os x"></a>
 </td>
 
 </tr>
 <tr>
 
-<td class="topalign">
-<h2 class="dotunder">data import</h2>
+<td>
+<h2>data import</h2>
 <a href="import.png"><img src="thumb_import.png" alt="data import"></a>
 </td>
 
 
-<td class="topalign">
-<h2 class="dotunder">data editor</h2>
+<td>
+<h2>data editor</h2>
 <a href="veusz_win_dataedit.png"><img src="thumb_veusz_win_dataedit.png" alt="data editor"></a>
 </td>
 
-<td class="topalign">
-<h2 class="dotunder">data creation</h2>
+<td>
+<h2>data creation</h2>
 <a href="screenshot3.png"><img src="thumb_screenshot3.png" alt="data creation"></a>
 </td>
 
 </tr>
 
 <tr>
-<td class="topalign">
-<h2 class="dotunder">histogram</h2>
+<td>
+<h2>histogram</h2>
 <a href="histogram.png"><img src="thumb_histogram.png" alt="histogram"></a>
 </td>
 
-<td class="topalign">
-<h2 class="dotunder">custom definitions</h2>
+<td>
+<h2>custom definitions</h2>
 <a href="customdefinitons.png"><img src="thumb_customdefinitons.png" alt="custom definitons"></a>
 </td>
 
-<td class="topalign">
-<h2 class="dotunder">default styles</h2>
+<td>
+<h2>default styles</h2>
 <a href="defaultstyle.png"><img src="thumb_defaultstyle.png" alt="default styles"></a>
 </td>
 
