--- a/index.html
+++ b/index.html
@@ -48,24 +48,14 @@ title: Veusz &ndash; a scientific plotting package
     or for automating tasks.
   </p>
 
-  <table>
-    <tr>
-      <td id="centcontainer">
-        <a href="/screenshots/">
-          <img src="/media/click-screenshot.png" alt="Screenshot" title="Screenshots">
-        </a>
-      </td>
-      <td id="centcontainer">
-        <a href="/examples/">
-          <img src="/media/click-example.png" alt="Examples" title="Examples">
-        </a>
-      </td>
-      <td id="centcontainer">
-        <a href="/examples3d/">
-          <img src="/media/click-3d-example.png" alt="3D Examples" title="3D Examples">
-        </a>
-      </td>
-    </tr>
-  </table>
+  <a href="/examples3d/">
+    <img src="/media/click-3d-example.png" alt="3D Examples" title="3D Examples">
+  </a>
+  <a href="/examples/">
+    <img src="/media/click-example.png" alt="2D Examples" title="2D Examples">
+  </a>
+  <a href="/screenshots/">
+    <img src="/media/click-screenshot.png" alt="Screenshot" title="Screenshots">
+  </a>
 
 </div>
