Add fixed windows binary

--- a/download/index.html
+++ b/download/index.html
@@ -13,12 +13,18 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <h1>{{ page.title }}</h1>
 
   <h2>Packages and source</h2>
-  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.txt">release notes</a>)</p>
+  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.txt">release notes</a>).
+    Note: The 3.0.1.1 version for Windows includes a fix to 3.0.1 for a missing Windows theme in the installer.
+  </p>
   <ul>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>)
+      <a href="{{dlroot}}/veusz-3.0.1.1-windows-setup.exe">Latest Windows binary</a>
+      (<a href="{{dlroot}}/veusz-3.0.1.1-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
+    <!-- <li> -->
+    <!--   <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a> -->
+    <!--   (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>) -->
+    <!-- </li> -->
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
