--- a/download/index.html
+++ b/download/index.html
@@ -14,24 +14,19 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
 
   <h2>Packages and source</h2>
   <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.txt">release notes</a>).
-    Note: The 3.0.1.1 version for Windows includes a fix to 3.0.1 for a missing Windows theme in the installer.
   </p>
   <ul>
     <li>
-      <a href="{{dlroot}}/veusz-3.0.1.1-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-3.0.1.1-windows-setup.exe.asc">GPG/PGP signature</a>)
-    </li>
-    <!-- <li> -->
-    <!--   <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a> -->
-    <!--   (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>) -->
-    <!-- </li> -->
+      <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>)
+    </li
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz">Latest Linux binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86.tar.xz.asc">GPG/PGP signature</a>)
+      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86-64.tar.xz">Latest Linux binary</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86-64.tar.xz.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}.tar.gz">Latest source code</a> with <a href="/releasenotes/{{ver}}-install.txt">install notes</a>
@@ -43,7 +38,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
 
   <p>
     Veusz is Copyright &copy;
-      2003-2018 <a href="http://www.jeremysanders.net">Jeremy
+      2003-2019 <a href="http://www.jeremysanders.net">Jeremy
       Sanders</a> and contributors.
 
     Veusz is <a href="https://www.gnu.org/philosophy/free-sw.html">Free
