--- a/download/index.html
+++ b/download/index.html
@@ -25,8 +25,8 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86-64.tar.xz">Latest Linux binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86-64.tar.xz.asc">GPG/PGP signature</a>)
+      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}.tar.gz">Latest source code</a> with <a href="/releasenotes/{{ver}}-install.txt">install notes</a>
