Update to Veusz 3.2.1

--- a/download/index.html
+++ b/download/index.html
@@ -17,8 +17,8 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   </p>
   <ul>
     <li>
-      <a href="{{dlroot}}/veusz-3.2.0.1-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-3.2.0.1-windows-setup.exe.asc">GPG/PGP signature</a>) (Note that this version replaces 3.2 for Windows, which was falsely detected as malware)
+      <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
+      (<a href="{{dlroot}}/veusz-{{ver}-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
