Fix missing bracket

--- a/download/index.html
+++ b/download/index.html
@@ -18,7 +18,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <ul>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}-windows-setup.exe.asc">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
