--- a/download/index.html
+++ b/download/index.html
@@ -13,19 +13,19 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <h1>{{ page.title }}</h1>
 
   <h2>Packages and source</h2>
-  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.txt">release notes</a>).
+  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.md">release notes</a>).
   </p>
   <ul>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe">Latest Windows binary</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-setup.exe.asc">GPG/PGP signature</a>)
+      <a href="{{dlroot}}/veusz-{{ver}}-x64-windows-setup.exe">Latest Windows binary (64 bit)</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-x64-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest Mac OS X binary</a>
+      <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary</a>
+      <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz.asc">GPG/PGP signature</a>)
     </li>
     <li>
