--- a/download/index.html
+++ b/download/index.html
@@ -13,7 +13,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <h1>{{ page.title }}</h1>
 
   <h2>Packages and source</h2>
-  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.md">release notes</a>).
+  <p>Latest version is {{ver}} (see <a href="/releasenotes/{{ver}}.txt">release notes</a>).
   </p>
   <ul>
     <li>
