--- a/download/index.html
+++ b/download/index.html
@@ -63,6 +63,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     <li><a href="http://cvsweb.openbsd.org/cgi-bin/cvsweb/ports/math/veusz/">OpenBSD</a></li>
     <li><a href="http://software.opensuse.org/download.html?project=science&package=python-veusz">openSUSE</a></li>
     <li><a href="https://edge.launchpad.net/~jeremysanders/+archive/ppa">Ubuntu PPA</a></li>
+    <li><a href="https://flathub.org/apps/details/io.github.veusz.Veusz">Flatpak</a></li>
   </ul>
 
 
