--- a/download/index.html
+++ b/download/index.html
@@ -21,6 +21,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-x64-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
+      Please note that version 3.4 is <a href="https://github.com/veusz/veusz/issues/564">currently broken for Mac OS</a>. Please <a href="https://github.com/veusz/veusz/releases/tag/veusz-3.3.1">download 3.3.1 until it is fixed</a>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
