--- a/download/index.html
+++ b/download/index.html
@@ -22,8 +22,8 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     </li>
     <li>
       Please note that version 3.4 is <a href="https://github.com/veusz/veusz/issues/564">currently broken for Mac OS</a>. Please <a href="https://github.com/veusz/veusz/releases/tag/veusz-3.3.1">download 3.3.1 until it is fixed</a>
-      <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
+      [broken version <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)]
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
