--- a/download/index.html
+++ b/download/index.html
@@ -21,9 +21,8 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-x64-windows-setup.exe.asc">GPG/PGP signature</a>)
     </li>
     <li>
-      <a href="{{dlroot}}/veusz-3.4.0.1-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
-      (<a href="{{dlroot}}/veusz-3.4.0.1-AppleOSX.dmg.asc">GPG/PGP signature</a>).
-      Please note that this version (3.4.0.1) is a Mac-specific version which fixes a crash in the original 3.4 binary.
+      <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
