--- a/download/index.html
+++ b/download/index.html
@@ -22,7 +22,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>).
       Please note that this version currently needs quarantine disabled to run, otherwise it will report it is damaged. For more details see <a href="https://github.com/veusz/veusz/issues/630#issuecomment-1305817737">this page</a>.
     </li>
     <li>
