--- a/download/index.html
+++ b/download/index.html
@@ -58,7 +58,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     <li><a href="http://packages.debian.org/search?keywords=veusz">Debian</a></li>
     <li><a href="https://admin.fedoraproject.org/pkgdb/package/veusz/">Fedora</a></li>
     <li><a href="https://flathub.org/apps/details/io.github.veusz.Veusz">Flatpak</a></li>
-    <li><a href="http://portsmon.freebsd.org/portoverview.py?category=science&amp;portname=veusz">FreeBSD</a></li>
+    <li><a href="https://www.freshports.org/science/py-veusz/">FreeBSD</a></li>
     <li><a href="http://packages.gentoo.org/package/sci-visualization/veusz">Gentoo</a></li>
     <li><a href="ftp://ftp.netbsd.org/pub/pkgsrc/current/pkgsrc/graphics/veusz/README.html">NetBSD</a></li>
     <li><a href="https://search.nixos.org/packages?channel=unstable&query=veusz">Nixpkgs</a></li>
