--- a/download/index.html
+++ b/download/index.html
@@ -23,7 +23,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg">Latest MacOS binary (MacOS 10.13 or later)</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX.dmg.asc">GPG/PGP signature</a>).
-      Please note that this application is not signed, so you will need to open by using Ctrl+click, then selecting Open.
+      Please note that this application is not signed, so you will need to open by holding down Control, clicking, then selecting Open.
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
