--- a/download/index.html
+++ b/download/index.html
@@ -17,8 +17,11 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}-fix
   </p>
   <ul>
     <li>
-      <a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe">Latest Windows binary (64 bit)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe.sig">GPG/PGP signature</a>)
+      Latest Windows
+      <a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe">Installer (64 bit)</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe.sig">GPG/PGP signature</a>),
+      <a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip">Portable ZIP (64 bit)</a>
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip.sig">GPG/PGP signature</a>),
     </li>
     <li>
       Latest MacOS <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg">ARM</a>
