--- a/download/index.html
+++ b/download/index.html
@@ -19,24 +19,24 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
     <li>
       Latest Windows
       <a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe">Installer (64 bit)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe.sig">GPG/PGP signature</a>),
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe.asc">GPG/PGP signature</a>),
       <a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip">Portable ZIP (64 bit)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip.sig">GPG/PGP signature</a>),
+      (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip.asc">GPG/PGP signature</a>),
     </li>
     <li>
       Latest MacOS <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg">ARM</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg.sig">signature</a>),
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg.asc">signature</a>),
       Latest MacOS <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-x86_64.dmg">x86_64</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-x86_64.dmg.sig">signature</a>).
+      (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-x86_64.dmg.asc">signature</a>).
       Please note that this application is not signed, so you will need to open by holding down Control, clicking, then selecting Open.
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz.asc">GPG/PGP signature</a>)
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}.tar.gz">Latest source code</a> with <a href="/releasenotes/{{ver}}-install.txt">install notes</a>
-      (<a href="{{dlroot}}/veusz-{{ver}}.tar.gz.sig">GPG/PGP signature</a>)
+      (<a href="{{dlroot}}/veusz-{{ver}}.tar.gz.asc">GPG/PGP signature</a>)
       or on <a href="https://pypi.python.org/pypi/veusz/">PyPI</a>
     </li>
     <li><a href="https://github.com/veusz/veusz/releases">All recent releases</a> (<a href="https://github.com/veusz/veusz/releases.atom">release feed</a>)</li>
