Document supported windows

--- a/download/index.html
+++ b/download/index.html
@@ -22,6 +22,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64-setup.exe.asc">GPG/PGP signature</a>),
       <a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip">Portable ZIP (64 bit)</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-windows-x64.zip.asc">GPG/PGP signature</a>),
+      compatible with Windows 10 or later.
     </li>
     <li>
       Latest MacOS <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg">ARM</a>
