--- a/download/index.html
+++ b/download/index.html
@@ -29,7 +29,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-arm.dmg.asc">signature</a>),
       Latest MacOS <a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-x86_64.dmg">x86_64</a>
       (<a href="{{dlroot}}/veusz-{{ver}}-AppleOSX-x86_64.dmg.asc">signature</a>).
-      Please note that this application is not signed, so you will need to open by holding down Control, clicking, then selecting Open.
+      Please note that this application is not signed, so you will need to <a href="https://github.com/veusz/veusz/issues/734">work around gatekeeper</a>.
     </li>
     <li>
       <a href="{{dlroot}}/veusz-{{ver}}-linux-x86_64.tar.xz">Latest Linux binary (64 bit x86-64)</a>
