Fix fedora link

--- a/download/index.html
+++ b/download/index.html
@@ -62,7 +62,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   <h2>Unix distribution packages</h2>
   <ul>
     <li><a href="http://packages.debian.org/search?keywords=veusz">Debian</a></li>
-    <li><a href="https://admin.fedoraproject.org/pkgdb/package/veusz/">Fedora</a></li>
+    <li><a href="https://packages.fedoraproject.org/pkgs/veusz/veusz/">Fedora</a></li>
     <li><a href="https://flathub.org/apps/details/io.github.veusz.Veusz">Flatpak</a></li>
     <li><a href="https://www.freshports.org/science/py-veusz/">FreeBSD</a></li>
     <li><a href="http://packages.gentoo.org/package/sci-visualization/veusz">Gentoo</a></li>
