Put a warning on the distribution packages (#779)

--- a/download/index.html
+++ b/download/index.html
@@ -60,6 +60,7 @@ https://github.com/veusz/veusz/releases/download/veusz-{{ver}}
   </p>
 
   <h2>Unix distribution packages</h2>
+  <p>Please note that the below links point to packages built by different people and may be out of date. If reporting a bug, please check that it exists in the current version. Please report packaging bugs to the distribution or packager.</p>
   <ul>
     <li><a href="http://packages.debian.org/search?keywords=veusz">Debian</a></li>
     <li><a href="https://packages.fedoraproject.org/pkgs/veusz/veusz/">Fedora</a></li>
